--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,173 @@
-.App {
+/* Estilo para el contenedor principal del catálogo */
+.book-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 30px;
+  padding: 40px;
+}
+
+/* Estilo para cada tarjeta de libro en el catálogo */
+.book-card {
+  background-color: #dff5ce;
+  border: 1px solid #ddd;
+  padding: 20px;
+  border-radius: 5px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Estilo para el título del libro */
+.book-title {
+  font-size: 1.2em;
+  font-weight: bold;
+  margin-bottom: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Estilo para la descripción del libro */
+.book-descripcion {
+  font-size: 1em;
+  margin-bottom: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* Estilo para el autor del libro */
+.book-autor {
+  font-size: 0.9em;
+  color: #555;
+  margin-bottom: 5px;
+}
+
+/* Estilo para la categoría del libro */
+.book-categoria {
+  font-size: 0.9em;
+  color: #555;
+}
+
+/* Estilo para el encabezado principal del catálogo */
+h1 {
+  font-size: 2em;
+  margin-bottom: 20px;
+  color: #4d6c35;
+  text-transform: uppercase;
+}
+
+/* Estilo para el menú de navegación */
+.menu {
+  background-color: #333;
+  padding: 10px 0;
+}
+
+/* Estilo para la lista de elementos del menú */
+.menu ul {
+  display: flex;
+  list-style: none;
+}
+
+/* Estilo para los elementos del menú */
+.menu-item {
+  margin: 0 10px;
+}
+
+/* Estilo para los enlaces del menú */
+.menu-item a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  padding: 5px 10px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+/* Estilo para los enlaces del menú al pasar el mouse */
+.menu-item a:hover {
+  background-color: #555;
+}
+
+/* Estilo para el contenedor del detalle del libro */
+.detalle-libro {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #dff5ce;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+/* Estilo para el select personalizado */
+.custom-select {
+  appearance: none;
+  background-color: #f5f5f5;
+  border: 1px solid #ddd;
+  padding: 10px;
+  border-radius: 5px;
+  width: 200px;
+  font-size: 1em;
+  cursor: pointer;
+}
+
+/* Estilo para las opciones del select */
+.custom-select option {
+  padding: 10px;
+  font-size: 1em;
+  background-color: #f5f5f5;
+  border: none;
+  border-radius: 0;
+  cursor: pointer;
+}
+
+/* Estilo cuando el select está enfocado (opcional) */
+.custom-select:focus {
+  outline: none;
+  border-color: #007bff;
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
+
+/* Estilo para el contenedor del formulario */
+.formulario-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  max-width: 400px;
+  margin: 0 auto;
 }
 
-.App-link {
-  color: #61dafb;
+/* Estilo para los campos del formulario */
+.formulario-container input[type="text"],
+.formulario-container textarea {
+  width: 100%;
+  padding: 15px;
+  margin-bottom: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 1em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Estilo para los campos del formulario al pasar el mouse */
+.formulario-container input[type="text"]:hover,
+.formulario-container textarea:hover {
+  border-color: #007bff;
+}
+
+/* Estilo para los campos del formulario cuando están enfocados */
+.formulario-container input[type="text"]:focus,
+.formulario-container textarea:focus {
+  outline: none;
+  border-color: #007bff;
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
+
+/* Estilo para el botón de enviar del formulario */
+.formulario-container button {
+  background-color: #007bff;
+  color: #fff;
+  padding: 15px 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 1em;
+  cursor: pointer;
+}
+
+/* Estilo para el botón de enviar del formulario al pasar el mouse */
+.formulario-container button:hover {
+  background-color: #0056b3;
 }
